--- a/app/views/characters/_edit.html.erb
+++ b/app/views/characters/_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-dialog modal-lg modal-dialog-center">
+<div class="modal-dialog modal-xl modal-dialog-center">
   <div class="modal-content">
     <div class="modal-header">
       <h3 class="modal-title mx-auto">【使用キャラクター編集】</h3>
