--- a/app/views/messages/_inbox.html.erb
+++ b/app/views/messages/_inbox.html.erb
@@ -5,7 +5,7 @@
       <% @message_inbox.each do |message| %>
         <% sendUser = send_user(message) %>
         <%= f.fields_for "messages[]", message do |msg| %>
-          <div class="my-2 bg-dark <%= "border border-info" if message.read_at.nil? || message.edited_at > message.read_at %>">
+          <div class="my-2 bg-dark <%= "border border-warning" if message.read_at.nil? || message.edited_at > message.read_at %>">
             <div class="d-flex justify-content-between">
               <div class="p-1">
                 <% if sendUser.present? %>
@@ -20,7 +20,7 @@
               <div class="m-1"><%= msg.check_box :permit, :checked => false %></div>
             </div>
             <div class="m-2"><%= simple_format(message.text) %></div>
-            <div class="m-2 text-right font-weight-bold text-muted"><%= link_to l(message.edited_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
+            <div class="m-2 d-flex justify-content-between font-weight-bold text-muted"><%= message.read_at.nil? || message.edited_at > message.read_at ? "未読" : "既読" %><%= link_to l(message.edited_at, format: :short), edit_user_message_path(@user, message), remote: true, class: "text-reset" %></div>
           </div>
           <% message.read_at = DateTime.now %>
           <% message.save %>
