--- a/app/views/tournaments/_toggle.html.erb
+++ b/app/views/tournaments/_toggle.html.erb
@@ -7,7 +7,7 @@
     <% if !@matches_opening.blank? %>
       <% @matches_opening.each do |matches| %>
         <%= return_user_from_participant(matches["match"]["player1_id"]).name + " vs " + return_user_from_participant(matches["match"]["player2_id"]).name + "  " %>
-        <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-success mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
+        <%= link_to "報告", tournament_report_path(@tournament, matches), remote: true, class: "btn btn-warning mb-2" if master_or_party?(@tournament, matches["match"]["player1_id"], matches["match"]["player2_id"]) %><br>
       <% end %>
     <% else %>
       <p>なし</p>
