--- a/app/views/users/_contact.html.erb
+++ b/app/views/users/_contact.html.erb
@@ -1,6 +1,3 @@
-<% if @user.twitter_url && @user.twitter_private == true %>
-  <div class="row justify-content-center">
-    <div class="m-3 bd-highlight">フォローする：<a href="<%= @user.twitter_url %>?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
-    <div class="m-3 bd-highlight">リプライする：<a href="https://twitter.com/intent/tweet?screen_name=TenTan441&ref_src=twsrc%5Etfw" class="twitter-mention-button" data-size="large" data-show-count="false"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
-  </div>
+<% if @user.twitter_url && @user.twitter_private == false %>
+  <div class="mt-2"><a href="<%= @user.twitter_url %>?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
 <% end %>
