--- a/app/views/users/_result_search.html.erb
+++ b/app/views/users/_result_search.html.erb
@@ -18,11 +18,16 @@
         <td colspan="3"><%= link_to tournament.name, tournament, class: "text-reset font-weight-bold" %></td>
         <td colspan="2" class="text-wrap text-break"><%= tournament.game_title %></td>
         <td colspan="2">
-          <%= link_to image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;"), master %><br>
-          <% if logged_in? %>
-            <%= link_to "#{master.name}", master, class: "text-reset font-weight-bold" %>
+          <% if !master.nil? %>
+            <% if logged_in? %>
+              <%= link_to image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;"), master %><br>
+              <%= link_to "#{master.name}", master, class: "text-reset font-weight-bold" %>
+            <% else %>
+              <%= image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;") %><br>
+              <%= master.name %>
+            <% end %>
           <% else %>
-            <%= master.name %>
+            削除されたユーザ
           <% end %>
         </td>
         <td colspan="2"><%= l(tournament.start_time, format: :short) %></td>
@@ -30,10 +35,12 @@
         <td colspan="2">
           <p class="show-ranking font-weight-bold font-italic float-right">
             <% if !(participant = Participant.where(tournament_id: tournament.id).find_by(user_id: @user.id)).nil? %>
-              <% if rank = participant.ranking %>
-                <%= rank.ordinalize %>
-              <% else %>
-                <%= Participant.where(tournament_id: tournament.id).count.ordinalize %>
+              <% if tournament.status == '完了' %>
+                <% if rank = participant.ranking %>
+                  <%= rank.ordinalize %>
+                <% else %>
+                  <%= Participant.where(tournament_id: tournament.id).count.ordinalize %>
+                <% end %>
               <% end %>
             <% else %>
               Mas
