--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,13 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, '新規登録') %>
 <% provide(:class_text, 'signup') %>
 <% provide(:button_text, '新規作成') %>
 <h1>ユーザー登録</h1>
-
+<p class="text-right">
+  <%= link_to image_tag("login_by_twitter.png", class: "img-fluid rounded") + " で登録", "/auth/twitter", method: :post, class: "btn btn-primary" %>
+</p>
 <div class="row">
   <div class="col-md-6 offset-md-3">
     <%= render 'form' %>
   </div>
-  
-  <p>
-    <%= link_to image_tag("login_by_twitter.png", class: "img-fluid rounded") + " で登録", "/auth/twitter", method: :post, class: "btn btn-primary" %>
-  </p>
 </div>
+
