--- a/app/views/users/_result_search.html.erb
+++ b/app/views/users/_result_search.html.erb
@@ -4,7 +4,7 @@
     <tr>
       <th colspan="3"><%= Tournament.human_attribute_name :name %></th>
       <th colspan="2"><%= Tournament.human_attribute_name :game_title %></th>
-      <th colspan="2"><%= Tournament.human_attribute_name :master %></th>
+      <th colspan="2"><%= Tournament.human_attribute_name :user_id %></th>
       <th colspan="2"><%= Tournament.human_attribute_name :start_time %></th>
       <th colspan="1"><%= Tournament.human_attribute_name :status %></th>
       <th colspan="2" class="text-right"><%= "順位" %></th>
