--- a/app/views/static_pages/introduction.html.erb
+++ b/app/views/static_pages/introduction.html.erb
@@ -2,6 +2,12 @@
 
 <div class="title">【使い方紹介】</div>
 
+<p class="m-2">紹介動画前編</p>
 <div class="embed-responsive embed-responsive-16by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/jrSfRU1a_F8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<p class="m-2">紹介動画後編</p>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8Jj8E_BfMl0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
