Complete for Heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,7 @@
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <div class="my-1"></div>
   </body>
   
 </html>
