--- a/app/views/characters/_edit.html.erb
+++ b/app/views/characters/_edit.html.erb
@@ -23,6 +23,7 @@
               <%= f.label "サブキャラ（3キャラまで）", class: "mt-5" %>
               <div id="sub-characters"></div>
               <%= f.submit "キャラ編集", class: "btn btn-secondary btn-block btn-login" %>
+              <p class="text-right"><%= link_to "大乱闘スマッシュブラザーズSPECIAL", 'https://www.smashbros.com/ja_JP/fighter/index.html', target: :_blank %>より引用</p>
             </div>
           <% end %>
         </div>
