--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
     </div>
-    <div class="my-5"></div>
+    <%= render 'layouts/footer' %>
   </body>
   
 </html>
