--- a/app/views/users/_title_character.html.erb
+++ b/app/views/users/_title_character.html.erb
@@ -39,6 +39,7 @@
         </div>
       </div>
     </div>
+    <p class="text-right"><%= link_to "大乱闘スマッシュブラザーズSPECIAL", 'https://www.smashbros.com/ja_JP/fighter/index.html', target: :_blank %>より引用</p>
   <% else %>
     <div class="text-center m-2">
       登録されているキャラクターはありません。
