--- a/app/views/tournaments/_toggle.html.erb
+++ b/app/views/tournaments/_toggle.html.erb
@@ -1,7 +1,7 @@
 <% case @state %>
 <% when 'open' %>
   <div class="row justify-content-between m-1">
-    <span>現在開催中のマッチ</span><p><%= link_to "終了済", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-secondary" %></p>
+    <span>現在開催中のマッチ</span><p><%= link_to "終了", tournament_toggle_path(@tournament, :state => 'complete'), remote: true, class: "btn btn-secondary" %></p>
   </div>
   <div class="d-none d-lg-block"><!-- 画面幅lg以上で表示 -->
     <% if !@matches_opening.blank? %>
