--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <footer class="hoge_footer">
   <div class="container">
     <div class="d-flex flex-column align-items-center">
-      <div class="d-flex align-items-center" style="height:60px;">© 2019 Yoshiki Kadosaki</div>
+      <div class="d-flex align-items-center" style="height:30px;">Respected<%= link_to "大乱闘スマッシュブラザーズ", 'https://www.smashbros.com/ja_JP/' %></div>
+      <div class="d-flex align-items-center" style="height:30px;">Copyright © 2019 Yoshiki Kadosaki</div>
     </div>
   </div>
 </footer>
